<resources>
    <string name="app_name">gallery</string>

    <string name="empty"> </string>
    <string name="home">主页</string>
    <string name="record">历史记录</string>
    <string name="my">我的</string>
    
    <string name="leader_board">点击榜</string>
    <string name="like">猜你喜欢</string>
    <string name="user_board">用户上传榜</string>

    <string name="likes_text">点赞</string>
    <string name="collect_text">收藏</string>
    <string name="share_text">分享</string>
    <string name="download_text">下载</string>

    <string name="my_collect">我的收藏</string>
    <string name="set_text">设置</string>
    <string name="user_upload_text">上传图片</string>
    <string name="track_clear">清空</string>

    <string name="user_name_hint">输入用户名</string>
    <string name="user_password_hint">输入密码</string>

    <string name="login">登录</string>
    <string name="register">注册</string>

    <string name="set_item_0">清除缓存</string>
    <string name="set_item_1">检查版本</string>


    <string name="confirm_rectify">确认修改</string>

    <string name="logout">退出</string>
    <string name="logout_text">退出登录</string>

    <string name="user_info">用户信息</string>
    <string name="user_info_item_0">头像</string>
    <string name="user_info_item_1">昵称</string>
    <string name="user_info_item_2">电话</string>
    <string name="user_info_item_3">邮箱</string>
    <string name="user_info_item_4">修改密码</string>

    <string name="confirm">确认</string>
    <string name="loading">加载中&#8230;</string>
</resources>
