<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/empty"
            android:src="@mipmap/people"/>

        <EditText
            android:id="@+id/user_name_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:labelFor="@+id/user_name_ed"
            android:textSize="12sp"
            android:hint="@string/user_name_hint"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/empty"
            android:src="@mipmap/lock"/>

        <EditText
            android:id="@+id/user_password_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:labelFor="@+id/user_password_ed"
            android:textSize="12sp"
            android:hint="@string/user_password_hint"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/login_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:gravity="center"
            android:background="@drawable/login_button_selector"
            android:textColor="@color/white"
            android:clickable="true"
            android:focusable="true"
            android:textSize="16sp"
            android:text="@string/login" />

        <TextView
            android:id="@+id/register_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:background="@drawable/login_button_selector"
            android:textColor="@color/white"
            android:clickable="true"
            android:focusable="true"
            android:textSize="16sp"
            android:text="@string/register" />

    </LinearLayout>


</LinearLayout>