<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/back_b"
            android:contentDescription="@string/empty"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/set_text"
            android:textColor="@android:color/black"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/space_color"/>

    <LinearLayout
        android:id="@+id/clear_cache_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="horizontal"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/item_selector">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_item_0"
            android:textColor="@android:color/black"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/cache_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color"/>


    <LinearLayout
        android:id="@+id/check_version_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="horizontal"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/item_selector">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_item_1"
            android:textColor="@android:color/black"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/version_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color"/>


    <TextView
        android:id="@+id/logout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/logout_button_selector"
        android:gravity="center"
        android:padding="8dp"
        android:textColor="@color/white"
        android:text="@string/logout"
        android:layout_marginTop="40dp"
        android:clickable="true"
        android:focusable="true"/>

</LinearLayout>