<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/back_b"
            android:contentDescription="@string/empty"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/user_info"
            android:textColor="@android:color/black"
            android:layout_centerInParent="true"/>

    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/space_color"/>

    <LinearLayout
        android:id="@+id/user_icon_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="horizontal"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:background="@drawable/item_selector">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_info_item_0"
            android:textColor="@android:color/black"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/user_icon_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/empty"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/empty"
            android:src="@mipmap/more"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/space_color"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/line_color"/>

    <LinearLayout
        android:id="@+id/user_name_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="horizontal"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:background="@drawable/item_selector">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_info_item_1"
            android:textColor="@android:color/black"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/user_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="测试昵称"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/empty"
            android:src="@mipmap/more"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/line_color"/>


    <LinearLayout
        android:id="@+id/phone_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="horizontal"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:background="@drawable/item_selector">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_info_item_2"
            android:textColor="@android:color/black"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/phone_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="15827011832"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/empty"
            android:src="@mipmap/more"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/line_color"/>


    <LinearLayout
        android:id="@+id/email_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="horizontal"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:background="@drawable/item_selector">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_info_item_3"
            android:textColor="@android:color/black"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="lgzc_work@163.com"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/empty"
            android:src="@mipmap/more"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/line_color"/>


    <LinearLayout
        android:id="@+id/password_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="horizontal"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:background="@drawable/item_selector">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_info_item_4"
            android:textColor="@android:color/black"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/empty"
            android:src="@mipmap/more"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/line_color"/>

    <TextView
        android:id="@+id/logout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/logout_button_selector"
        android:gravity="center"
        android:padding="8dp"
        android:textColor="@color/white"
        android:text="@string/logout_text"
        android:layout_marginTop="40dp"
        android:clickable="true"
        android:focusable="true"/>

</LinearLayout>
