<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:transitionName="image"/>

<!--    <com.viewpagerindicator.CirclePageIndicator
        xmlns:cpi="http://schemas.android.com/apk/res-auto"
        android:id="@+id/indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_gravity="bottom|center_horizontal"
        cpi:radius="5dp"
        cpi:fillColor="@color/white"
        cpi:pageColor="@color/gray"
        cpi:strokeWidth="0dp"/>-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/likes_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/likes_selector"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:text="@string/likes_text"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="40dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/collect_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/collect_selector"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:text="@string/collect_text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="40dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/download_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/download_selector"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:text="@string/download_text"/>

        </LinearLayout>

    </LinearLayout>
</FrameLayout>